EventsAlumni/force-app/main/default/objects/Event_Master__c/Event_Master__c.object-meta.xml
<CustomObject>
    <label>Event Master</label>
    <nameField>
        <label>Events/Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Master Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>