EventsAlumni/force-app/main/default/objects/Event_Master__c/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <label>Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>