EventsAlumni/force-app/main/default/objects/Event_Master__c/fields/Event_banner__c.field-meta.xml
<CustomField>
    <fullName>Event_banner__c</fullName>
    <label>Event banner</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>