EventsAlumni/force-app/main/default/objects/Event_Master__c/fields/Event_Broucher__c.field-meta.xml
<CustomField>
    <fullName>Event_Broucher__c</fullName>
    <label>Event Broucher</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>