EventsAlumni/force-app/main/default/objects/Event_Master__c/fields/Event_Current_Step__c.field-meta.xml
<CustomField>
    <fullName>Event_Current_Step__c</fullName>
    <label>Event Current Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>