EventsAlumni/force-app/main/default/objects/Event_Master__c/fields/Event_Fee__c.field-meta.xml
<CustomField>
    <fullName>Event_Fee__c</fullName>
    <label>Event Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>