EventsAlumni/force-app/main/default/objects/Event_Master__c/fields/Event_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Group_Id__c</fullName>
    <label>Event Group Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>