EventsAlumni/force-app/main/default/objects/Event_Master__c/fields/Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Status__c</fullName>
    <label>Event Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>