EventsAlumni/force-app/main/default/objects/Event_Master__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cultural</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>Orientation</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>Literature</fullName>
            </value>
            <value>
                <fullName>Wellness</fullName>
            </value>
            <value>
                <fullName>Charity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>