EventsAlumni/force-app/main/default/objects/Event_Master__c/fields/Evvent_Group__c.field-meta.xml
<CustomField>
    <fullName>Evvent_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Event_Master__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Event Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event_Master__c</referenceTo>
    <relationshipLabel>Event Masters</relationshipLabel>
    <relationshipName>Event_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>