EventsAlumni/force-app/main/default/objects/Event_Master__c/fields/Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue__c</fullName>
    <label>Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>