EventsAlumni/force-app/main/default/objects/Event_Master__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <displayFormat>EM# {00000000}</displayFormat>
    <label>Id</label>
    <type>AutoNumber</type>
</CustomField>