EventsAlumni/force-app/main/default/objects/Event_Master__c/fields/Is_All_Day__c.field-meta.xml
<CustomField>
    <fullName>Is_All_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is All Day?</label>
    <type>Checkbox</type>
</CustomField>