EventsAlumni/force-app/main/default/objects/Event_Master__c/fields/Max_Allowed_Participants__c.field-meta.xml
<CustomField>
    <fullName>Max_Allowed_Participants__c</fullName>
    <label>Max Allowed Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>