EventsAlumni/force-app/main/default/objects/Event_Master__c/fields/Single_Multi_Day__c.field-meta.xml
<CustomField>
    <fullName>Single_Multi_Day__c</fullName>
    <formula>IF(
   Start_Date__c = End_Date__c,
    &quot;Single Day&quot;,
    &quot;Multi-Day&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Single/Multi-Day</label>
    <type>Text</type>
</CustomField>