EventsAlumni/force-app/main/default/objects/Event_Master__c/fields/Target_Audience_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience_Applicable__c</fullName>
    <label>Target Audience/Applicable</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Students</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Teachers</fullName>
            </value>
            <value>
                <fullName>Designers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>