EventsAlumni/force-app/main/default/objects/Event_Master__c/fields/What_to_Expect_From_Event__c.field-meta.xml
<CustomField>
    <fullName>What_to_Expect_From_Event__c</fullName>
    <label>What to Expect From Event?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>