EventsAlumni/force-app/main/default/objects/Event_Master__c/recordTypes/Event_Group.recordType-meta.xml
<RecordType>
    <fullName>Event_Group</fullName>
    <active>true</active>
    <label>Event Group</label>
</RecordType>