EventsAlumni/force-app/main/default/objects/Event_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Type__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Is_Archived__c</columns>
    <columns>Is_Scheduled__c</columns>
    <columns>Is_Published__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>