EventsAlumni/force-app/main/default/objects/Event_Master__c/listViews/Event_Groups.listView-meta.xml
<ListView>
    <fullName>Event_Groups</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Expected_Revenue__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event_Master__c.Event_Group</value>
    </filters>
    <label>Event Groups</label>
</ListView>