EventsAlumni/force-app/main/default/objects/Event_Master__c/listViews/Events.listView-meta.xml
<ListView>
    <fullName>Events</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Is_All_Day__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event_Master__c.Event</value>
    </filters>
    <label>Events</label>
</ListView>