EventsAlumni/force-app/main/default/objects/Event_Master__c/listViews/Events_by_Owner.listView-meta.xml
<ListView>
    <fullName>Events_by_Owner</fullName>
    <columns>NAME</columns>
    <columns>Event_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Event_Fee__c</columns>
    <filterScope>Mine</filterScope>
    <label>Events by Owner</label>
</ListView>