EventsAlumni/force-app/main/default/objects/Event_Master__c/listViews/Past_Events.listView-meta.xml
<ListView>
    <fullName>Past_Events</fullName>
    <columns>NAME</columns>
    <columns>Event_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Date__c</columns>
    <columns>End_Time__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Past Events</label>
</ListView>