EventsAlumni/force-app/main/default/objects/Event_Master__c/listViews/Pending_Approvals.listView-meta.xml
<ListView>
    <fullName>Pending_Approvals</fullName>
    <columns>NAME</columns>
    <columns>Event_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Date__c</columns>
    <columns>End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Approvals</label>
</ListView>