EventsAlumni/force-app/main/default/objects/Event_Master__c/listViews/Upcoming_Events.listView-meta.xml
<ListView>
    <fullName>Upcoming_Events</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Upcoming Events</label>
</ListView>